# pyjira

./: .gitignore  .readthedocs.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
docs/: conf.py  index.md  requirements.txt  rest_api_v3_app_data_policies.json
docs/advanced/: error-handling.md  pagination.md
docs/source/: conf.py
docs/source/advanced/: async.md  models.md
docs/source/development/: changelog.md  contributing.md
docs/source/getting-started/: authentication.md  installation.md  quickstart.md
src/pyjira/: __init__.py  client.py  config.py  exceptions.py  pagination.py
src/pyjira/models/: __init__.py  common.py  component.py  dashboard.py  field.py  filter.py  group.py  issue.py  issue_link.py  issuetype_full.py  notification_scheme.py  permission.py  priority_full.py  project.py  resolution_full.py  role.py  screen.py  search.py  status_full.py  user.py  version.py  workflow.py
src/pyjira/resources/: __init__.py  attachments.py  components.py  dashboards.py  fields.py  filters.py  groups.py  issue_links.py  issue_types.py  issues.py  notification_schemes.py  permissions.py  priorities.py  projects.py  resolutions.py  roles.py  screens.py  search.py  server_info.py  statuses.py  users.py  versions.py  workflows.py
src/pyjirav3/: __init__.py  auth.py  client.py
src/pyjirav3/models/: __init__.py  comment.py  errors.py
src/pyjirav3/resources/: __init__.py  comments.py
tests/: conftest.py  test_client.py  test_issues.py  test_pagination.py  test_search.py
