[project]
name = "pyjirav3"
version = "0.1.2"
description = "A modern, fully-typed Python client for the Jira Cloud REST API v3"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.28",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "respx>=0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyjira"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
